--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-redux": "^8.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "daisyui": "^4.5.0"
   }
 }
